ARM: dts: msm: Add device-type for virtualized input devices
Add the device-type parameter for the virtualized input devices under
qcom,vm-config.

Change-Id: I1d80cd44bfd98536a8658f81337d69be7bb0b3bb

--- a/qcom/lemans-gunyah-vm.dtsi
+++ b/qcom/lemans-gunyah-vm.dtsi
@@ -375,6 +375,7 @@
 			virtio-mmio@12 {
 				vdevice-type = "virtio-mmio";
 				generate = "/virtio-mmio";
+				virtio,device-type = <18>;		/* VirtIO Input ID */
 				peer-default;
 				vqs-num = <0x2>;
 				push-compatible = "virtio,mmio";
@@ -420,6 +421,7 @@
 			virtio-mmio@15 {
 				vdevice-type = "virtio-mmio";
 				generate = "/virtio-mmio";
+				virtio,device-type = <18>;		/* VirtIO Input ID */
 				peer-default;
 				vqs-num = <0x2>;
 				push-compatible = "virtio,mmio";
