ARM: dts: msm: Change interrupt type for uart console
GIC driver has been updated to 5.15 and they have added check
for IRQ_NONE macro if it detects it will throw warning msg,
due to this, extra logging is happening and seeing some delay
in bootup time.

Corrected the interrupt type for qcs405
as IRQ_TYPE_LEVEL_HIGH.

Change-Id: I4a145ebde5835719db38903443eedda0bdbb348b

--- a/qcom/qcs405-blsp.dtsi
+++ b/qcom/qcs405-blsp.dtsi
@@ -20,7 +20,7 @@
 	blsp1_uart2_console: serial@78b1000 {
 		compatible = "qcom,msm-uartdm", "qcom,msm-uartdm-v1.4";
 		reg = <0x78b1000 0x200>;
-		interrupts = <0 118 0>;
+		interrupts = <GIC_SPI 118 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&gcc GCC_BLSP1_UART2_APPS_CLK>,
 			<&gcc GCC_BLSP1_AHB_CLK>;
 		clock-names = "core", "iface";
