ARM: dts: msm: Enable ICE(Inline Crypto Engine)
This change adds dtsi entries for ICE(Inline Crypto Engine)
driver on SA8225P target.

Change-Id: Iac079ed59f7a507fa375e22f45a2a7e66b58b894

--- a/qcom/lemans.dtsi
+++ b/qcom/lemans.dtsi
@@ -1939,8 +1939,9 @@
 
 	ufshc_mem: ufshc@1d84000 {
 		compatible = "qcom,ufshc";
-		reg = <0x1d84000 0x3000>;
-		reg-names = "ufs_mem";
+		reg = <0x1d84000 0x3000>,
+		<0x1d88000 0x8000>;
+		reg-names = "ufs_mem", "ufs_ice";
 		interrupts = <GIC_SPI 265 IRQ_TYPE_LEVEL_HIGH>;
 		phys = <&ufsphy_mem>;
 		phy-names = "ufsphy";
@@ -2082,8 +2083,9 @@
 
 	ufshc2_mem: ufshc2@1da4000 {
 		compatible = "qcom,ufshc";
-		reg = <0x1da4000 0x3000>;
-		reg-names = "ufs_mem";
+		reg = <0x1da4000 0x3000>,
+		<0x1da8000 0x8000>;
+		reg-names = "ufs_mem", "ufs_ice";
 		interrupts = <GIC_SPI 125 IRQ_TYPE_LEVEL_HIGH>;
 		phys = <&ufs2phy_mem>;
 		phy-names = "ufsphy";
