--- a/qcom/qcs405.dtsi
+++ b/qcom/qcs405.dtsi
@@ -1020,7 +1020,7 @@
 		reg = <0x720000 0x20000>,
 			<0x704000 0x20000>;
 		reg-names = "crypto-base","crypto-bam-base";
-		interrupts = <0 206 0>;
+		interrupts = <GIC_SPI 206 IRQ_TYPE_LEVEL_HIGH>;
 		qcom,bam-pipe-pair = <2>;
 		qcom,ce-hw-instance = <0>;
 		qcom,ce-device = <0>;
