ARM: dts: qcom: Add dts entry for ufs_ice register
Add register name and address for ufs_ice.

Test:
1) Validated FBEv2.
2) Validated FBE v1(OTA and New Launch).

Change-Id: I95a3c69d7362a616d47535a5a467ccac5b267d5e

--- a/qcom/trinket.dtsi
+++ b/qcom/trinket.dtsi
@@ -2221,8 +2221,8 @@
 
 	ufshc_mem: ufshc@4804000 {
 		compatible = "qcom,ufshc";
-		reg = <0x4804000 0x3000>;
-		reg-names = "ufs_mem";
+		reg = <0x4804000 0x3000>, <0x4810000 0x8000>;
+		reg-names = "ufs_mem", "ufs_ice";
 		interrupts = <GIC_SPI 356 IRQ_TYPE_LEVEL_HIGH>;
 		phys = <&ufsphy_mem>;
 		phy-names = "ufsphy";
