--- a/qcom/trinket.dtsi
+++ b/qcom/trinket.dtsi
@@ -524,11 +524,12 @@
 			reg = <0x0 0x5f800000 0x0 0x1e00000>;
 		};
 
-		/* QSEECOM (20 MB) */
-		qseecom_mem: qseecom_region@5e400000 {
+		qseecom_mem: qseecom_region {
 			compatible = "shared-dma-pool";
-			no-map;
-			reg = <0x0 0x5e400000 0x0 0x1400000>;
+			alloc-ranges = <0x0 0x00000000 0x0 0xffffffff>;
+			reusable;
+			alignment = <0x0 0x400000>;
+			size = <0x0 0x1400000>;
 		};
 
 		/* user_config (16 MB) */
