ARM: dts: msm: add APQ no uc load flag
Adding apq no uc load flag in case of
IPA uC loading not required in APQ's.

Change-Id: Id76de255e5b1071152fe2355fc0f2df5c7b822e1

--- a/qcom/kalamap-qcs.dtsi
+++ b/qcom/kalamap-qcs.dtsi
@@ -74,6 +74,7 @@
 		qcom,ee = <0>;
 		qcom,ipa-config-is-auto;
 		qcom,ipa-config-is-apq-dma; /* APQ DMA Use Case*/
+		qcom,ipa-config-is-apq-no-uc-load; /* APQ No uC loading*/
 		qcom,entire-ipa-block-size = <0x200000>;
 		qcom,use-ipa-tethering-bridge;
 		qcom,mhi-event-ring-id-limits = <9 11>; /* start and end */
