--- a/qcom/sdm670.dtsi
+++ b/qcom/sdm670.dtsi
@@ -1881,7 +1881,7 @@
 			"rx_lane0_sync_clk";
 		clocks =
 			<&gcc GCC_UFS_PHY_AXI_HW_CTL_CLK>,
-			<&gcc UFS_PHY_AXI_UFS_VOTE_CLK>,
+			<&gcc GCC_AGGRE_UFS_PHY_AXI_CLK>,
 			<&gcc GCC_UFS_PHY_AHB_CLK>,
 			<&gcc GCC_UFS_PHY_UNIPRO_CORE_HW_CTL_CLK>,
 			<&gcc GCC_UFS_PHY_ICE_CORE_HW_CTL_CLK>,
@@ -2428,10 +2428,8 @@
 
 		clocks = <&gcc GCC_SDCC1_AHB_CLK>,
 			<&gcc GCC_SDCC1_APPS_CLK>,
-			<&gcc GCC_SDCC1_ICE_CORE_CLK>,
-			<&gcc UFS_PHY_AXI_EMMC_VOTE_CLK>;
-		clock-names = "iface_clk", "core_clk", "ice_core_clk",
-			"bus_aggr_clk";
+			<&gcc GCC_SDCC1_ICE_CORE_CLK>;
+		clock-names = "iface_clk", "core_clk", "ice_core_clk";
 
 		qcom,ice-clk-rates = <300000000 75000000>;
 
