ARM: dts: msm: Add smcinvoke dts node for trinket
Enable legacy smcinvoke for trinket target.

Test:
1.Device is booted up and smcinvoke node is up.
2.Validated smcinvoke sample client nominal test.

Change-Id: I935b7aff3fd75c70eb1892e26c67a7540daa11f3

--- a/qcom/trinket.dtsi
+++ b/qcom/trinket.dtsi
@@ -1191,6 +1191,13 @@
 		qcom,qsee-reentrancy-support = <2>;
 	};
 
+	qcom_smcinvoke: smcinvoke@46d00000 {
+		compatible = "qcom,smcinvoke";
+		qcom,support-legacy_smc;
+		reg = <0x46d00000 0x2200000>;
+		reg-names = "secapp-region";
+	};
+
 	qcom_tzlog: tz-log@0c125720 {
 		compatible = "qcom,tz-log";
 		reg = <0x0c125720 0x3000>;
