--- a/qcom/trinket-thermal.dtsi
+++ b/qcom/trinket-thermal.dtsi
@@ -39,12 +39,6 @@
 	qcom,cpu-pause {
 		compatible = "qcom,thermal-pause";
 
-		cpu0_pause: cpu0-pause {
-			qcom,cpus = <&CPU0>;
-			qcom,cdev-alias = "thermal-pause-1";
-			#cooling-cells = <2>;
-		};
-
 		cpu1_pause: cpu1-pause {
 			qcom,cpus = <&CPU1>;
 			qcom,cdev-alias = "thermal-pause-2";
@@ -88,11 +82,6 @@
 		};
 
 		/* Thermal-engine cooling devices */
-		pause-cpu0 {
-			qcom,cpus = <&CPU0>;
-			qcom,cdev-alias = "pause-cpu0";
-		};
-
 		pause-cpu1 {
 			qcom,cpus = <&CPU1>;
 			qcom,cdev-alias = "pause-cpu1";
@@ -177,7 +166,6 @@
 
 	qcom,cpufreq-cdev {
 		compatible = "qcom,cpufreq-cdev";
-		qcom,cpus = <&CPU0 &CPU4>;
 		cpu-cluster0 {
 			qcom,cpus = <&CPU0 &CPU1 &CPU2 &CPU3>;
 		};
@@ -235,16 +223,6 @@
 				qcom,qmi-dev-name = "cpuv_restriction_cold";
 				#cooling-cells = <2>;
 			};
-
-			cdsp_sw: cdsp {
-				qcom,qmi-dev-name = "cdsp_sw";
-				#cooling-cells = <2>;
-			};
-
-			cdsp_hw: hvx {
-				qcom,qmi-dev-name = "cdsp_hw";
-				#cooling-cells = <2>;
-			};
 		};
 	};
 
@@ -260,6 +238,11 @@
 		/* 2nd and 3rd offsets to bypass VICTIM1 */
 		qcom,bypass-client-list = <0xa004 0xc004 0xc008>;
 		#cooling-cells = <2>;
+	};
+
+	qcom,devfreq-cdev {
+		compatible = "qcom,devfreq-cdev";
+		qcom,devfreq = <&msm_gpu>;
 	};
 };
 
@@ -515,11 +498,6 @@
 		};
 
 		cooling-maps {
-			cpu0_cdev {
-				trip = <&silv_cpus_config>;
-				cooling-device = <&cpu0_pause 1 1>;
-			};
-
 			cpu1_cdev {
 				trip = <&silv_cpus_config>;
 				cooling-device = <&cpu1_pause 1 1>;
