ARM: dts: samsung: Import `Project Diamond DM1Q` devicetrees
* Due to Samsung's incomplete open source
* Dump from S911BXXU3CXCF

Change-Id: I2f055726b66b8c7c2ec2c66d080b9a6e5602889d

--- a/samsung/Makefile
+++ b/samsung/Makefile
@@ -3,6 +3,21 @@
 KALAMA_BASE_DTB += ../qcom/kalama.dtb ../qcom/kalama-v2.dtb
 KALAMA_APQ_BASE_DTB += ../qcom/kalamap.dtb ../qcom/kalamap-v2.dtb
 
+ifeq ($(CONFIG_SEC_PLATFORM_DM1Q),y)
+SAMSUNG_KALAMA_BOARDS += \
+    dm1q_eur_openx_w00_r01.dtbo \
+    dm1q_eur_openx_w00_r02.dtbo \
+    dm1q_eur_openx_w00_r03.dtbo \
+    dm1q_eur_openx_w00_r04.dtbo \
+    dm1q_eur_openx_w00_r05.dtbo \
+    dm1q_eur_openx_w00_r06.dtbo \
+    dm1q_eur_openx_w00_r07.dtbo \
+    dm1q_eur_openx_w00_r08.dtbo \
+    dm1q_eur_openx_w00_r09.dtbo \
+    dm1q_eur_openx_w00_r13.dtbo
+endif
+
+ifeq ($(CONFIG_SEC_PLATFORM_DM2Q),y)
 SAMSUNG_KALAMA_BOARDS += \
     dm2q_chn_hkx_w00_r00.dtbo \
     dm2q_chn_hkx_w00_r01.dtbo \
@@ -13,6 +28,7 @@ SAMSUNG_KALAMA_BOARDS += \
     dm2q_chn_hkx_w00_r06.dtbo \
     dm2q_chn_hkx_w00_r08.dtbo \
     dm2q_chn_hkx_w00_r11.dtbo
+endif
 
 kalama-overlays-dtb-y += $(SAMSUNG_KALAMA_BOARDS) $(KALAMA_BASE_DTB) $(KALAMA_APQ_BASE_DTB)
 dtb-y += $(SAMSUNG_KALAMA_BOARDS) $(KALAMA_BASE_DTB) $(KALAMA_APQ_BASE_DTB)
