devicetree: samsung: Import Project foldable Q5Q devicetrees
* Due to Samsung's incomplete open source
* Dump from  F946BXXU1BWKA

Change-Id: Idcb1bc5eeab7f150660b3ac317bec552410ba81d

--- a/samsung/Makefile
+++ b/samsung/Makefile
@@ -44,6 +44,13 @@ SAMSUNG_KALAMA_BOARDS += \
     dm3q_eur_openx_w00_r13.dtbo
 endif
 
+ifeq ($(CONFIG_SEC_PLATFORM_Q5Q),y)
+SAMSUNG_KALAMA_BOARDS += \
+    q5q_eur_openx_w00_r04.dtbo \
+    q5q_eur_openx_w00_r06.dtbo \
+    q5q_eur_openx_w00_r09.dtbo
+endif
+
 kalama-overlays-dtb-y += $(SAMSUNG_KALAMA_BOARDS) $(KALAMA_BASE_DTB) $(KALAMA_APQ_BASE_DTB)
 dtb-y += $(SAMSUNG_KALAMA_BOARDS) $(KALAMA_BASE_DTB) $(KALAMA_APQ_BASE_DTB)
 
